applications/we-get-the-hydro/we-get-the-hydro-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: we-get-the-hydro
  annotations:
    argocd.argoproj.io/sync-wave: '-10'
