applications/we-get-the-hydro/default-deny-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: we-get-the-hydro
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
