applications/we-get-the-hydro/we-get-the-hydro-ingress-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: we-get-the-hydro-ingress
  namespace: we-get-the-hydro
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-ingress
        - namespaceSelector:
            matchLabels:
              policy-group.network.openshift.io/host-network: ''
      ports:
        - port: 8080
          protocol: TCP
